index/static/style.css
/* ... */
.scroll-up {
  z-index: 9001;
  position: fixed;
  top: 55px;
  right: 12px;
  background: rgb(0, 191, 165);
  cursor: pointer;
  height: 34px;
  width: 34px;
  border-radius: 50%;
  border: 2px solid rgb(0, 191, 165);
  color: unset;
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
  transition: all .25s ease-in-out;
}
.scroll-up:hover,
.scroll-up:focus {
  color: #fff;
  outline: none;
  transition: all .25s ease-in-out;
}
.dope-field {
  margin-bottom: 5px;
  width: 100%;
  min-width: 32px;
  min-height: 32px;
  padding: 3px 6px;
  border-radius: .25rem;
  border: 2px solid rgb(0, 191, 165);
  transition: all .15s ease-in-out;
}
.dope-field:hover,
.dope-field:focus {
  outline: none;
  box-shadow: inset rgba(0, 0, 0, .2) -1px -1px 5px, inset rgba(0, 0, 0, .2) 1px 1px 5px;
}
.dope-form-group {
  text-align: left;
}
.dope-form-group label {
  margin-bottom: 0;
}
.dope-buttons {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.dope-buttons>* {
  margin-right: 5px;
}
.dope-wrapper {
  margin: auto;
  padding: 10px;
  max-width: 375px;
  text-align: center;
}
.dope-wrapper p {
  font-size: 14px;
  margin-bottom: 10px;
}

/* BOOTSTRAP COLLAPSE */
.collapsing {
  transition: height .1s ease;
}

/* COLORS */
.color-1-trans {
  background: rgba(0, 191, 165, .95);
}
.color-2-trans {
  background: rgba(255, 255, 255, .2);
}
.color-3-trans {
  background: rgba(204, 204, 204, .5);
}

/* MAIN */
#main-wrapper {
  padding-top: 44px;
  padding-bottom: 30px;
  min-height: 100vh;
}
#left,
#main,
#right {
  min-height: unset;
  padding: 0 20px;
}

/* DOPEBAR */
#dopebar {
  z-index: 5000;
  padding: 5px 0;
  min-height: 44px;
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
}
#dopebar,
#footer {
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
}
#dopebar-c {
  text-align: center;
}
#dopebar ul,
#footer ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
#dopebar ul li,
#footer ul li {
  display: inline-block;
  vertical-align: middle;
}
#footer ul {
  text-align: center;
}
#dopebar-r > * {
  float: right;
}
#dopebar-c h1 {
  font-family: Orbitron;
  line-height: 24px;
  font-size: 28px!important;
  margin: 0;
  text-align: center;
}
#dopebar-collapse {
  padding: 10px 10px 0;
}
#dopebar-collapse ul {
  margin-top: 10px;
}
.dopebar-link  {
  padding: 5px 6px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  background: none!important;
  border: none;
  color: rgb(46, 46, 46);
  font-size: 16px;
  transition: all .25s ease-in-out;
}
.dopebar-link:hover,
.dopebar-link:focus,
.dopebar-link[aria-expanded="true"] {
  color: #fff;
  outline: none;
}

/* SEARCH */
.search-form {
  position: relative;
}
.search-button {
  padding: 0 4px;
  font-size: 14px;
  cursor: pointer;
  position: absolute;
  right: 9px;
  top: 4px;
  z-index: 150;
  background-color: inherit;
  width: 26px;
  height: 26px;
  border-radius: .25rem;
  border: 2px solid rgba(0, 191, 165, 0);
  transition: all .1s ease-in-out;
}
.search-button:hover,
.search-button:focus {
  border: 2px solid rgb(0, 191, 165);
  outline: none;
}
.q {
  width: unset;
  font-size: 16px;
  margin: 0 5px;
  padding-right: 30px;
  border: 2px solid rgb(0, 191, 165)
}

/* ERRORS */
.errors p {
  display: block;
  border-radius: .25rem;
  padding: 10px;
  margin: 10px;
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
}

.genres > *,
.languages > * {
  display: none;
}

/* SPLASH */
.splash h1,
.dashboard h1 {
  font-size: 22px;
  margin: 20px 0;
}
.login-content {
  margin: 20px 25px 0;
  height: 200px;
}
.login-content p {
  margin: 20px 0;
}
.btn-dope-social {
  display: inline-flex;
  padding: 0;
}
.social-button {
  padding: 3px 6px;   /* same as btn-dope */
}
.social-icon {
  font-weight: 400;
  padding: 3px 10px;   /* just a lil bit wider */
  background: rgb(0, 191, 165);
  color: #fff;
}
.login-buttons,
.logo {
  justify-content: center;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.login-buttons > *,
.logo > * {
  margin: 5px 2.5px;
}
.logo > * {
  cursor: default;
}
a.donut-wrapper {
  color: rgb(46, 46, 46);
}
.donut-wrapper {
  display: inline-block;
  position: relative;
  border: 2px solid rgb(0, 191, 165);
  border-radius: 50%;
  width: 40%;
  height: 0;
  padding: 10% 5% 30%;
  margin: 10px 5%;
  transition: all .25s ease-in-out;
}
.donut-wrapper h1 {
  font-size: 28px;
  font-weight: 600;
}
.donut-wrapper:hover {
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
  transition: all .25s ease-in-out;
  background: rgb(0, 191, 165);
  color: #fff;
}

/* CHECKBOX */
input[type=checkbox] {
  visibility: hidden;
}
.checkbox {
  width: 25px;
  margin: 10px;
  position: relative;
}
.dope-check-label .dope-check {
  visibility: hidden;
  /* <-- hide the default checkbox, the rest is to hide and alllow tabbing, which display:none prevents */
  display: block;
  height: 0;
  width: 0;
  position: absolute;
  overflow: hidden;
}
.dope-check-label span {
  /* <-- style the artificial checkbox */
  position: relative;
  height: 20px;
  width: 20px;
  border: 2px solid rgb(0, 191, 165);
  border-radius: .25rem;
  display: inline-block;
  margin-right: 5px;
}
.dope-check-label p {
  margin: 0;
  display: inline-block;
  vertical-align: top;
}
[type=checkbox]:checked+span:after {
  content: '';
  position: absolute;
  width: 10px;
  height: 7px;
  background: 0 0;
  top: 3px;
  left: 3px;
  border: 3px solid #00bfa5;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0;
}
[type=checkbox]:checked+span:after {
  opacity: 1;
}

/* SLICK */
.slick a {
  color: unset;
}
.slick a:hover,
.slick a:focus {
  outline: none;
}
.slick h1 {
  display: inline-block;
  font-size: 18px;
  margin: 0 0 10px;
}
.slick p {
  margin: 0;
  font-weight: 400;
}
.slick-list {
  margin: 0 35px;
}
.slick-slide {
  outline: none;
  margin: 5px;
}
/* ... */

